@@ -37,6 +37,7 @@ Project:
   - separate compile + link does not write to object dir
   - ddoc files
 - remove D2.043
+- additional options for resource compiler
 
 Language service:
 -----------------
